<resources>
    <string name="app_name">SportApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="prompt_textlogin">Inicia Sesión</string>
    <string name="prompt_usuario">Usuario:</string>
    <string name="prompt_password">Contraseña:</string>
    <string name="action_sign_in">Continuar</string>
    <string name="action_send_strava">Enviar Datos</string>
    <string name="type_training">Tipo: </string>
    <string name="start_training">Iniciar</string>
    <string name="stop_training">Finalizar</string>
    <string name="prompt_completed_training">Entrenamiento finalizado!</string>
    <string name="prompt_total_time">Tiempo total:</string>
    <string name="prompt_date_training">Fecha:</string>
    <string name="prompt_cal_training">Calorías:</string>
    <string name="prompt_ftp_training">FTP:</string>
    <string name="prompt_vo2_training">VO2max:</string>
    <string name="save_training">Guardar Entrenamiento:</string>
    <string name="calendar_tittle">Calendario de eventos y entrenamientos</string>
    <string name="calendar_event_field">Evento</string>
    <string name="calendar_date_field">Fecha</string>
    <string name="calendar_description_field">Descripción</string>
    <string name="home_close_sesion">Cerrar Sesión</string>
    <string name="promt_start_training">Ejercicio iniciado.!!!</string>
    <string name="promt_finish_training">Ejercicio finalizado.!!!</string>
    <string name="promt_data_sended">Datos Enviados!!!</string>
    <string name="units_minutes">min.</string>
    <string name="boton_finish">FTP Vo2Max</string>
</resources>