<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Fila de títulos -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/calendar_event_field"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/calendar_date_field"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/calendar_description_field"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

    </LinearLayout>

    <!-- Fila de datos -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewColumn1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/textViewColumn2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/textViewColumn3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

    </LinearLayout>

</LinearLayout>
