<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backcolorapp">

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:background="@color/backtittle"
        android:fontFamily="@font/lato_bold_font"
        android:gravity="center|center_vertical"
        android:paddingLeft="0dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="48dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="55dp"
        android:layout_height="111dp"
        android:paddingLeft="0dp"
        app:layout_constraintEnd_toEndOf="@+id/textViewTitulo"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="@+id/textViewTitulo"
        app:srcCompat="@drawable/deportista"
        tools:layout_editor_absoluteY="5dp" />

    <TextView
        android:id="@+id/textViewPpal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="154dp"
        android:layout_marginBottom="140dp"
        android:fontFamily="@font/lato_bold_font"
        android:text="@string/prompt_textlogin"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.587"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewTitulo" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="226dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginBottom="112dp"
        android:background="@drawable/button_background"

        android:enabled="true"
        android:fontFamily="@font/lato_bold_font"
        android:text="@string/action_sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="300dp"
        android:layout_height="32dp"
        android:layout_marginBottom="92dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingStart="18dp"
        android:text="password"

        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.675"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/lato_bold_font"
        android:text="@string/prompt_usuario"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.286"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="300dp"
        android:layout_height="32dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:fontFamily="@font/lato_regular_font"
        android:inputType="text"
        android:paddingStart="18dp"
        android:text="rodcel123"
        android:textColor="@color/black"
        android:textSize="18dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/lato_bold_font"
        android:text="@string/prompt_password"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>